--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,7 @@ outline: none;
     rgb(165, 146, 146) 0%,
     rgba(17,17,0.6)100%,
     ),
-    url('/images/profile-pic.png');
+    url('/images/image1\ Small.jpeg');
     background-size: cover;
     position: relative;
     color: #131313;
